rename the parameter, and introduce a better method name, deprecating the old one.